# opensearch-launchpad

./: DESIGN.md  README.md  RELEASE.md  pyproject.toml  test_kiro_llm_integration.py
.github/: CODEOWNERS
opensearch-architect-power/: CHANGELOG.md  POWER.md  README.md  TOOLS_REFERENCE.md  mcp.json
opensearch-architect-power/servers/opensearch-mcp/: README.md  pyproject.toml
opensearch-architect-power/servers/opensearch-mcp/opensearch_mcp/: __init__.py  server.py
opensearch-architect-power/servers/opensearch-mcp/opensearch_mcp/tools/: __init__.py  knowledge_base.py  opensearch_client.py  opensearch_ops.py  sample_docs.py  search_ui.py  verification.py  web_search.py
opensearch-architect-power/servers/opensearch-mcp/tests/: __init__.py  test_index_doc.py  test_integration.py  test_knowledge_base.py  test_mcp_protocol.py  test_opensearch_ops.py  test_sample_docs.py  test_verification_and_ui.py
opensearch_launchpad/: mcp_server.py  opensearch_ops_tools.py  orchestrator.py  orchestrator_engine.py  planning_session.py  solution_planning_assistant.py  tools.py  ui_server_standalone.py  worker.py
opensearch_orchestrator/: __init__.py  mcp_server.py  opensearch_ops_tools.py
tests/: test_agentic_search_tools.py  test_capability_examples_from_candidate_docs.py  test_local_path_sample_loading.py  test_local_pretrained_model_fault_tolerance.py  test_mapping_type_guardrails.py  test_mcp_advanced_tool_gate.py  test_mcp_agentic_tools_dispatch.py  test_mcp_evaluation_flow.py  test_mcp_load_sample_auth.py  test_mcp_manual_execution_flow.py  test_search_ui_query_routing.py  (+19 more)
(+22 files in other folders)
