[project]
name = "opensearch-mcp"
version = "1.0.0"
description = "MCP server for OpenSearch semantic search architecture"
requires-python = ">=3.8"
dependencies = [
    "mcp>=0.9.0",
    "opensearch-py>=2.0.0",
    "nltk>=3.8.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_backend"
